2009-12-07  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Fragments now make WebSocket URL parsing fail.
        https://bugs.webkit.org/show_bug.cgi?id=32144

        * websocket/tests/script-tests/url-parsing.js:
        * websocket/tests/script-tests/url-with-fragment.js: Removed.
        * websocket/tests/url-parsing-expected.txt:
        * websocket/tests/url-with-fragment-expected.txt: Removed.
        * websocket/tests/url-with-fragment.html: Removed.

2009-12-07  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Darin Adler.

        Fix wrong length parsing in WebSocket.
        https://bugs.webkit.org/show_bug.cgi?id=32203

        These two tests assumed wrong length encoding in frame: it parsed
        length from bytes with 8th bit on.  But spec says length is encoded
        as a series of 7-bit bytes stored in octests with the 8th bit on
        *but the last byte*.
        These tests encodes a frame that has 129 length, so it must be
        \x81\0x01 instead of \x81\0x81.

        * websocket/tests/frame-length-longer-than-buffer_wsh.py:
        * websocket/tests/frame-length-skip_wsh.py:

2009-12-07  Nikolas Zimmermann  <nzimmermann@rim.com>

        Rubber-stamped by Maciej Stachowiak.

        Turn on (SVG) Filters for Qt.
        https://bugs.webkit.org/show_bug.cgi?id=32224

        * platform/qt/Skipped:

2009-12-07  Nikolas Zimmermann  <nzimmermann@rim.com>

        Not reviewed. Reverting problematic patch, causing errors.

        Revert r51789 (Avoid zero division during SVGPaintServerPattern::setup()). Crashes on all Windows slaves.
        Reopen bug https://bugs.webkit.org/show_bug.cgi?id=29912.

        * svg/custom/script-tests/small-pattern.js: Removed.
        * svg/custom/small-pattern-expected.txt: Removed.
        * svg/custom/small-pattern.html: Removed.

2009-12-07  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.
