@@ -705,10 +705,6 @@ plugins/reloadplugins-no-pages.html
 # These tests require Qt Widgets
 plugins/qt-qwidget-plugin.html
 
-# Failure introduced by http://trac.webkit.org/changeset/51429
-# hamaji will look into this.
-editing/selection/last-empty-inline.html
-
 # Some versions of CFNetwork override CGI scripts' Content-Type headers <rdar://problem/7434354>
 http/tests/globalhistory/history-delegate-basic-refresh-redirect.html
 http/tests/loading/redirect-with-no-location-crash.html
